--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "maath": "^0.5.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.3.0",
     "react-router-dom": "^6.14.2",
     "react-vertical-timeline-component": "^3.6.0",
     "three": "^0.149.0"
